# memforge

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.sh  docker-compose.yml  eslint.config.js  init.sql  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md  docker-compose.benchmark.yml  e2e_accuracy.py  locomo_eval.py  models.py  pyproject.toml  run_benchmark.py  stress_test.sh
benchmark/adapters/: base.py  graphiti_adapter.py  mem0_adapter.py  memforge_adapter.py
benchmark/metrics/: cost_tracker.py  latency_tracker.py  scorer.py  test_scorer.py
benchmark/results/: comparison_table.md  e2e_accuracy.json  locomo_results.json  per_query_results.csv
benchmark/seed/: conversations.json  ground_truth.json
docker/: Dockerfile.postgres
migrations/: 003_temporal_validity.sql  004_add_tsvector.sql  005_memory_facts.sql
scripts/: backfill-fact-entities.ts  e2e-smoke.sh
src/: cli.ts  config.ts  mcp-integration.test.ts  scheduler.ts  server.ts
src/classification/: classifier.test.ts  classifier.ts
src/context/: ranking.test.ts  ranking.ts  tokenPacker.test.ts  tokenPacker.ts
src/db/: connection.ts  queries.ts
src/decay/: decay.ts
src/dedup/: arbitrator.test.ts  (+4 more)
tests/: conftest.py  test_dedup.py  test_multi_agent.py  test_recall.py  test_reflect_decay.py  test_remember.py
(+19 files in other folders)
